# j-mssql-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/j_mssql_mcp/: __init__.py  server.py
