[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "j-mssql-mcp"
version = "1.0.0"
description = "SQL Server MCP with Windows Authentication for Kiro AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyodbc>=5.0.0",
]

[project.scripts]
j-mssql-mcp = "j_mssql_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/j_mssql_mcp"]
